<resources>
    <string name="app_name">ShiftLab</string>

    <string name="first_name_hint">Enter first name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="password_hint">Enter password</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="sign_up">Sign up</string>


    <string name="invalid_first_name">Not a valid first name</string>
    <string name="invalid_last_name">Not a valid last name</string>
    <string name="invalid_password">Not a valid password name</string>
    <string name="invalid_confirm_password">Password mismatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_date">01.01.2023</string>
</resources>